dot files pushed

--- a/ghostty/config
+++ b/ghostty/config
@@ -1,9 +1,7 @@
 # This is the configuration file for Ghostty.
 #
 # This template file has been automatically created at the following
-# path since Ghostty couldn't find any existing config files on your system:
-#
-#   /home/suraj/.config/ghostty/config
+# path since Ghostty couldn't find any existing config files on your system: # #   /home/suraj/.config/ghostty/config
 #
 # The template does not set any default options, since Ghostty ships
 # with sensible defaults for all options. Users should only need to set
@@ -41,12 +39,15 @@
 # # which is explained in the docs for that config option.
 # # Just for example:
 # resize-overlay-duration = 4s 200ms
+# window-padding-color=background
 
-window-padding-color=background
-window-padding-x=0
-window-padding-y=0
-window-padding-balance=true
-window-step-resize=true
+# window-padding-x=0
+# window-padding-y=0
+# window-padding-balance=true
+# window-step-resize=true
 cursor-style=block
-cursor-style-blink=true
-theme=Popping and Locking
+theme=GruvboxDark
+confirm-close-surface=false
+cursor-color=#689D6A
+font-size=21
+font-family=Iosevka Nerd Font
