--- a/alacritty/alacritty.toml
+++ b/alacritty/alacritty.toml
@@ -1,15 +1,37 @@
-[font]
-normal={family="IosevkaTerm Nerd Font"}
-size=22
-
 [colors.primary]
-background="#262626"
+background = "#262626"
+foreground = "#ebdbb2"
 
 [selection]
-save_to_clipboard=true
+save_to_clipboard = true
 
-[window]
-dynamic_padding=true
-resize_increments=true
+[cursor]
+style = { shape = "Block" ,blinking = "On"}
 
+[colors.selection]
+text = "#928374"
+background = "#3c3836"
 
+[colors.normal]
+black   = "#282828"
+red     = "#cc241d"
+green   = "#98971a"
+yellow  = "#d79921"
+blue    = "#458588"
+magenta = "#b16286"
+cyan    = "#689d6a"
+white   = "#a89984"
+
+[colors.bright]
+black   = "#928374"
+red     = "#fb4934"
+green   = "#b8bb26"
+yellow  = "#fabd2d"
+blue    = "#83a598"
+magenta = "#d3869b"
+cyan    = "#8ec07c"
+white   = "#ebdbb2"
+
+[font]
+normal.family="Iosevka"
+size = 15
