--- a/hypr/hyprlock.conf
+++ b/hypr/hyprlock.conf
@@ -34,39 +34,45 @@ input-field {
     font_family = SF Pro Display Bold
     placeholder_text = <i><span foreground="##ffffff99">Enter Password</span></i>
     hide_input = false
-    position = 0, -90
+    position = 0, -130 # Moved further down
     halign = center
     valign = center
 }
 
+---
+
 # Time
-# label {
-#     monitor =
-#     text = cmd[update:1000] echo "<span>$(date +"%H:%M")</span>"
-#     color = rgba(216, 222, 233, 0.70)
-#     font_size = 130
-#     font_family = SF Pro Display Bold
-#     position = 0, 240
-#     halign = center
-#     valign = center
-# }
+label {
+    monitor =
+    text = cmd[update:1000] echo "<span>$(date +"%H:%M")</span>"
+    color = rgba(216, 222, 233, 0.70)
+    font_size = 130
+    font_family = SF Pro Display Bold
+    position = 0, 300 # Adjusted position
+    halign = center
+    valign = center
+}
+
+---
 
 # Day-Month-Date
-# label {
-#     monitor =
-#     text = cmd[update:1000] echo -e "$(date +"%A, %d %B")"
-#     color = rgba(216, 222, 233, 0.70)
-#     font_size = 30
-#     font_family = SF Pro Display Bold
-#     position = 0, 105
-#     halign = center
-#     valign = center
-# }
+label {
+    monitor =
+    text = cmd[update:1000] echo -e "$(date +"%A, %d %B")"
+    color = rgba(216, 222, 233, 0.70)
+    font_size = 30
+    font_family = SF Pro Display Bold
+    position = 0, 200 # Adjusted position
+    halign = center
+    valign = center
+}
 
-# Profie-Photo
+---
+
+# Profile Photo
 image {
     monitor =
-    path = /home/suraj/Downloads/user.jpg
+    path = ~/.config/hypr/user.jpg
     border_color = 0xffdddddd
     border_size = 0
     size = 120
@@ -74,10 +80,12 @@ image {
     rotate = 0
     reload_time = -1
     reload_cmd =
-    position = 0, 100
+    position = 0, -20 # Adjusted position
     halign = center
     valign = center
 }
+
+---
 
 # USER
 label {
@@ -86,8 +94,7 @@ label {
     color = rgba(216, 222, 233, 0.70)
     font_size = 25
     font_family = JetBrains Mono Nerd
-    position = 0, -18
+    position = 0, 100 # Adjusted position, below the image
     halign = center
     valign = center
 }
-
