--- a/default.conf
+++ b/default.conf
@@ -2,13 +2,37 @@
 *
 
 [main]
-leftalt = layer(vim)
+capslock = overload(vim, esc)
+esc = capslock
+rightalt=toggle(vim)
+f5=macro(C-a C-c)
 
 [vim]
-h=left
-j=down
-k=up
+h = left
+[ = {
+] = }
+j = down
+k = up
+C-w=C-w
+'="
+;=:
+9=(
+0=)
+8=*
+\=|
+, = <
+. = >
+C-l=C-l
+l = right
+u = esc
+o = A-left
+p = A-right
+q = C-f1
+w = C-f2
+e = C-f3
+
+[bloodyroar]
+i=up
+j=left
+k=down
 l=right
-q=esc
-a=A-left
-d=A-right
