--- a/hypr/hyprpaper.conf
+++ b/hypr/hyprpaper.conf
@@ -1,2 +1,2 @@
-preload=/home/suraj/.config/hypr/wallpaper.jpg
-wallpaper= ,/home/suraj/.config/hypr/wallpaper.jpg
+preload=/home/suraj/.config/hypr/wallpaper.png
+wallpaper= ,/home/suraj/.config/hypr/wallpaper.png
