--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -33,9 +33,12 @@ monitor=,preferred,auto,1
 # See https://wiki.hyprland.org/Configuring/Keywords/
 
 # Set programs that you use
-$terminal = alacritty
+$terminal = foot
+$browser = zen-browser
 $fileManager = nemo
-$menu = rofi -show drun
+$menu = fuzzel
+$webapp = $browser --app
+
 
 
 #################
@@ -53,8 +56,9 @@ exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 exec-once = hyprpaper
 exec-once = swaync
 exec-once = hyprlock
-exec-once = hyprsunset -t 2800
 exec-once = pkill waybar && waybar & disown
+# load all the plugins you installed
+exec-once = hyprctl plugin load "$HYPR_PLUGIN_DIR/lib/libhyprexpo.so"
 
 
 #############################
@@ -63,9 +67,13 @@ exec-once = pkill waybar && waybar & disown
 
 # See https://wiki.hyprland.org/Configuring/Environment-variables/
 
-env = XCURSOR_SIZE,24
-env = HYPRCURSOR_SIZE,24
+env = XCURSOR_THEME,Bibata-Ghost
+env = XCURSOR_SIZE,30
+exec-once = gsettings set org.gnome.desktop.interface cursor-theme Bibata-Ghost
+exec-once = gsettings set org.gnome.desktop.interface cursor-size 30
 
+env = HYPRCURSOR_THEME,Bibata-Spirit
+env = HYPRCURSOR_SIZE,30
 
 #####################
 ### LOOK AND FEEL ###
@@ -75,13 +83,13 @@ env = HYPRCURSOR_SIZE,24
 
 # https://wiki.hyprland.org/Configuring/Variables/#general
 general {
-    gaps_in = 3
-    gaps_out = 5
+    gaps_in = 4
+    gaps_out = 6
 
     border_size = 2
 
     # https://wiki.hyprland.org/Configuring/Variables/#variable-types for info about colors
-    col.active_border = rgb(E39E07)
+    col.active_border = rgb(cccccc)
     # col.inactive_border = rgb(EBDBB2) # Gruvbox faded background, with full opacity
     # Set to true enable resizing windows by clicking and dragging on borders and gaps
     resize_on_border = true
@@ -97,8 +105,8 @@ general {
 
 # https://wiki.hyprland.org/Configuring/Variables/#decoration
 decoration {
-    rounding = 0
-    rounding_power = 5
+    rounding = 8
+    rounding_power = 8
     active_opacity = 1
     inactive_opacity = 1
     shadow {
@@ -111,15 +119,13 @@ decoration {
     # https://wiki.hyprland.org/Configuring/Variables/#blur
     blur {
         enabled = true
-        size = 8
-        passes = 3
+        size = 10
+        passes = 5
         xray = true
         popups=true
         input_methods=true
         new_optimizations = true
     }
-    layerrule = blur,waybar
-    blurls = waybar
 }
 
 # https://wiki.hyprland.org/Configuring/Variables/#animations
@@ -194,12 +200,12 @@ input {
     kb_options =
     kb_rules =
     follow_mouse = 1
-    repeat_rate = 50
-    repeat_delay = 250
-    sensitivity = 0.7 # -1.0 - 1.0, 0 means no modification.
+    repeat_rate = 250
+    repeat_delay = 220
+    sensitivity = 0.9 # -1.0 - 1.0, 0 means no modification.
 
     touchpad {
-        natural_scroll = true
+        natural_scroll = true 
         disable_while_typing=true
     }
 
@@ -320,34 +326,30 @@ windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned
 bind = $mainMod,PRINT,exec,hyprshot -m window output --clipboard-only
 bind = $shiftMod, PRINT, exec, hyprshot -m region --clipboard-only
 bind = ,PRINT,exec,hyprshot -m output --clipboard-only
-bind = $mainMod, B, exec, rofi-bluetooth
-bind = $mainMod, N, exec, rofi-wifi-menu
+bind = $mainMod, B, exec, ~/.config/waybar/scripts/blue.sh
+bind = $mainMod SHIFT, N, exec, rofi-wifi-menu
 bind = $mainMod, Z, exec , zen-browser
 bind = ALT, D ,exec , hyprctl dispatch workspace +1
 bind = ALT,A, exec, hyprctl dispatch workspace -1
 
-bind = $mainMod SHIFT,PRINT, exec, ~/.config/rofi/applets/bin/screenshot.sh
-bind = $mainMod ALT,R, exec, ~/.config/rofi/applets/bin/apps.sh
 binde =ALT, Tab, workspace, previous
 binde = SUPER,Tab,workspace,previous
 
-bindel = SUPER,O,exec,hyprsunset -t 2800
+bindel = SUPER,O,exec,hyprsunset -t 3200
 bindel = SUPER SHIFT,O, exec,pkill hyprsunset
 bind = SUPER SHIFT, F,fullscreen,0
 
-windowrulev2 = opacity 0.86 0.9,class:.*
-bind = SHIFT CTRL,R,exec,~/Documents/dotfiles/wfrc.sh
+# windowrulev2 = opacity 0.8 0.9,class:.*
+bind = SHIFT CTRL,R,exec,exec ~/.config/waybar/scripts/wfrc.sh
 
 windowrule = float,workspace:5
 bind = SUPER SHIFT ,Q,exec,alacritty
 
-bind = CTRL SUPER,F,exec, /home/suraj/.config/waybar/scripts/toggle_power_profiles.sh
+# web sites binds
+bind = SUPER ,X,exec,zen-browser --new-window https://x.com
+bind = SUPER, G, exec,zen-browser --new-window https://mail.google.com/mail/u/1/
 
-bind = CTRL SHIFT,I,exec,~/.config/hypr/scripts/note.sh
-
-bind = $mainMod, RETURN, exec, alacritty
-windowrule = opaque,class:mpv
-bind = SHIFT CTRL,N,exec,~/.config/waybar/scripts/dnd-toggle.sh
-
-exec-once = hyprctl setcursor Bibata-Modern-Ice 22
-
+bind = CTRL ALT,delete, exec, ~/.config/waybar/scripts/powermenu.sh
+bind = CTRL ,0,exec,gammastep &
+bind = CTRL SHIFT,0,exec,pkill gammastep
+exec-once = gammastep
