--- a/hypr/hyprlock.conf
+++ b/hypr/hyprlock.conf
@@ -4,7 +4,7 @@
 # BACKGROUND
 background {
     monitor =
-    path = /home/suraj/.config/hypr/wallpaper.jpg
+    path = /home/suraj/.config/hypr/wallpaper.png
     blur_passes = 2
     contrast = 0.8916
     brightness = 0.8172
