new ghostty config

--- a/fuzzel/fuzzel.ini
+++ b/fuzzel/fuzzel.ini
@@ -1,9 +1,9 @@
 [main]
-font=JetBrainsMono NF SemiBold:size=13
+font=IosevkaTerm Nerd Font:size=14
 dpi-aware=no
 fields=name,generic,comment,categories,filename,keywords
 terminal=foot -e
-prompt="󰣇 Search: "
+prompt="󰣇  Search: "
 icon-theme=Papirus
 icons-enabled=yes
 show-actions=yes
