--- a/foot/foot.ini
+++ b/foot/foot.ini
@@ -1,6 +1,6 @@
 [main]
 pad=5x5 center
-font=Iosevka Term Slab:size=15
+font=IosevkaTerm Nerd Font:size=15
 letter-spacing=0px
 horizontal-letter-offset=0
 vertical-letter-offset=0
