--- a/.tmux.conf
+++ b/.tmux.conf
@@ -11,10 +11,11 @@ set -g @plugin 'vaaleyard/tmux-dotbar'
 set -g @tmux-dotbar-right true
 set -g @tmux-dotbar-left false
 set -g @tmux-dotbar-position bottom
-set -g @tmux-dotbar-bg "#282828"
+set -g @tmux-dotbar-bg "#000000"
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 bind -n M-f display-popup -E "tmux new-session -A -s scratch"
+
 bind '"' if-shell -F '#{==:#{session_name},scratch}' { 
     detach-client 
   } { 
@@ -31,7 +32,9 @@ bind '"' if-shell -F '#{==:#{session_name},scratch}' {
 
 # Use Ctrl+c to create a new window
 unbind C-c
-bind -n M-c new-window
+bind -n M-n new-window
+# Close current pane with Alt+x without prefix
+bind -n M-c kill-pane
 
 # Split panes using Alt+| and Alt+- without prefix
 bind -n M-\\ split-window -h  # Alt+\ (which appears as |)
@@ -46,10 +49,6 @@ bind -n M-Down select-pane -D
 # Switch windows using Shift+arrow without prefix
 bind -n S-Left previous-window
 bind -n S-Right next-window
-
-# Close current pane with Alt+x without prefix
-bind -n M-x kill-pane
-
 
 set -g mouse on 
 run '~/.tmux/plugins/tpm/tpm'
