--- a/foot/foot.ini
+++ b/foot/foot.ini
@@ -1,6 +1,6 @@
 [main]
 pad=5x5 center
-font=Iosevka Term Slab:size=15
+font=IosevkaTerm Nerd Font:size=15
 letter-spacing=0px
 horizontal-letter-offset=0
 vertical-letter-offset=0
@@ -8,44 +8,50 @@ line-height = 19
 box-drawings-uses-font-glyphs=yes
 initial-window-size-pixels = 1300x800
 
+[csd]
+preferred=none
+size=0
 
 [colors]
-background=080808
-foreground=cccccc
+cursor = 000000 ffffff
+
+alpha=0.85
+background = 181818    
+foreground = e4e4ef   
 
 # Black
-regular0=000000
+regular0 = 000000
 # Red
-regular1=cc0000
+regular1 = c73c3f    
 # Green
-regular2=00cc00
+regular2 = 73c936   
 # Yellow
-regular3=cccc00
+regular3 = ffdd33  
 # Blue
-regular4=5788f2
+regular4 = 96a6c8 
 # Magenta
-regular5=cc00cc
+regular5 = 9e95c7  
 # Cyan
-regular6=00cccc
+regular6 = 00cccc 
 # White
-regular7=cccccc
+regular7 = f5f5f5
 
 # Bright Black
-bright0=666666
+bright0 = 454545 
 # Bright Red
-bright1=ecf0f1 
+bright1 = ff4f58  
 # Bright Green
-bright2=00ff00
+bright2 = a8ff62  
 # Bright Yellow
-bright3=ffff00
+bright3 = ffff8d  
 # Bright Blue
-bright4=0000ff
+bright4 = a0c0ff  
 # Bright Magenta
-bright5=ff00ff
+bright5 = cfa0ff  
 # Bright Cyan
-bright6=00ffff
+bright6 = 62ffff 
 # Bright White
-bright7=ffffff
+bright7 = ffffff
 
 
 [scrollback]
