--- a/sway/config
+++ b/sway/config
@@ -1,14 +1,15 @@
-# Default config for sway
+
 #
 # Copy this to ~/.config/sway/config and edit it to your liking.
 #
-# Read `man 5 sway` for a complete reference.
+
 
 ### Variables
-#
+
 # Logo key. Use Mod1 for Alt.
-set $mod Mod4
+exec autotiling-rs
 exec swww-daemon & disown
+exec env DISPLAY=:0 xwayland-satellite
 # Home row direction keys, like vim
 set $left h
 set $down j
@@ -18,6 +19,7 @@ set $right l
 set $term foot
 # Your preferred application launcher
 set $menu fuzzel
+set $mod Super
 
 ### Output configuration
 #
@@ -52,6 +54,7 @@ output * bg /usr/share/backgrounds/sway/Sway_Wallpaper_Blue_1920x1080.png fill
       tap enabled
       natural_scroll enabled
       middle_emulation enabled
+			pointer_accel 0.5
   }
 #
 #   input type:keyboard {
@@ -70,6 +73,8 @@ output * bg /usr/share/backgrounds/sway/Sway_Wallpaper_Blue_1920x1080.png fill
 
     # Kill focused window
     bindsym $mod+c kill
+
+		bindsym $mod+b exec ~/.config/waybar/scripts/blue.sh
 
     # Start your launcher
     bindsym $mod+r exec $menu
@@ -143,8 +148,8 @@ output * bg /usr/share/backgrounds/sway/Sway_Wallpaper_Blue_1920x1080.png fill
     # You can "split" the current object of your focus with
     # $mod+b or $mod+v, for horizontal and vertical splits
     # respectively.
-    bindsym $mod+b splith
-    bindsym $mod+v splitv
+    bindsym alt+b splith
+    bindsym alt+v splitv
 
     # Switch the current container between different layout styles
     bindsym $mod+s layout stacking
@@ -155,7 +160,7 @@ output * bg /usr/share/backgrounds/sway/Sway_Wallpaper_Blue_1920x1080.png fill
     bindsym $mod+f fullscreen
 
     # Toggle the current focus between tiling and floating mode
-    bindsym $mod+Shift+space floating toggle
+    bindsym $mod+v floating toggle
 		bindsym alt+l workspace next_on_output
 		bindsym alt+h workspace prev_on_output
 		bindgesture swipe:right workspace next
@@ -224,7 +229,8 @@ bindsym alt+r mode "resize"
 # Read `man 5 sway-bar` for more information about this section.
 bar {
     position top
-    status_command while date +'%Y-%m-%d %X'; do sleep 1; done
+    # status_command while date +'%Y-%m-%d %X'; do sleep 1; done
+		status_command i3status
     workspace_buttons yes
     font "IosevkaTerm Nerd Font 10"
     height 25
@@ -285,3 +291,7 @@ client.urgent   $base07  $base00  $base08  $base0B  $base02
 client.placeholder       $base02  $base00  $base06  $base03  $base04
 client.background        $base00
 
+
+# disabling the border and title
+# default_border pixel 2
+# default_floating_border pixel 2
